Build Fixes
Fixes required for qa test suite to build and run tests.  Some minor errors remaining.